--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="send">
-    <input class="input" type="text">
+    <input class="input" type="text" placeholder="Enter city">
     <button class="btn">
       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         x="0px" y="0px" width="451.846px" height="451.847px" viewBox="0 0 451.846 451.847"
